# Q_Projects

./: README.md
Socket_Terminal_Client_Windows/: client.cpp
Socket_Terminal_Server_RPi/: server  server.cpp
Socket_Wxwidgets_Client_CMAKE/: CMakeLists.txt  wxSocket_Client.cpp  wxSocket_Client.h
Socket_Wxwidgets_Server_CMAKE/: CmakeLists.txt  ServerMain.cpp  ServerMain.h
